--- a/Android/EVSmartCharge2/app/build.gradle
+++ b/Android/EVSmartCharge2/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.ford.evsmartcharge"
         minSdkVersion 16
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('amqp-client-5.6.0.jar')
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -31,6 +32,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.google.firebase:firebase-core:12.0.1'
     testImplementation 'junit:junit:4.12'
+    implementation files('libs/amqp-client-5.6.0.jar')
 }
 
 
