--- a/Android/EVSmartCharge2/settings.gradle
+++ b/Android/EVSmartCharge2/settings.gradle
@@ -1,1 +1,1 @@
-include ':app'
+include ':app', ':amqp-client-5.5.1', ':slf4j-api-1.7.25', ':amqp-client-5.6.0', ':commons-cli-1.1', ':commons-io-1.2', ':lib', ':libs'
