--- a/Android/EVSmartCharge2/app/build.gradle
+++ b/Android/EVSmartCharge2/app/build.gradle
@@ -17,11 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation files('amqp-client-5.6.0.jar')
+    //implementation files('amqp-client-5.6.0.jar')
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
     implementation 'com.google.firebase:firebase-database:12.0.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -34,7 +40,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation files('libs/amqp-client-5.6.0.jar')
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
