--- a/Android/EVSmartCharge2/app/build.gradle
+++ b/Android/EVSmartCharge2/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:12.0.1'
     testImplementation 'junit:junit:4.12'
     implementation files('libs/amqp-client-5.6.0.jar')
+    implementation files('libs/slf4j-api-1.7.25.jar')
 }
 
 
